# PW-ARKO

./: README.md
INTEL-x86/: CMakeLists.txt  Julia.asm  Julia.h  main.c
RISC-V/: quadratic_function.asm
